--- a/css/app.css
+++ b/css/app.css
@@ -16,11 +16,11 @@
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
-
+/*
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
 }
-
+*/
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
 	position: absolute;
