--- a/css/app.css
+++ b/css/app.css
@@ -43,6 +43,9 @@
 
 /* Style the back side */
 .flip-card-back {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     transform: rotateY(360deg);
     background-image: url('../images/back-card.png');
 }
@@ -58,15 +61,34 @@
 
 .bloque-jugador {
     width: 100%; 
-    height: 200px;
+    height: auto;
     margin-top: 10px; 
+    padding: 5px;
 }
 
 .tablero {
-
+    padding: 10px; 
     margin-left: 0;
     margin-right: auto;
-    
+}
+
+#id_turno {
+    padding: 5px 0 5px 15px; 
+    font-size: 1.6em;
+}
+
+.font-info {
+    font-family: "Comic Sans MS", Impact, Charcoal, sans-serif;
+}
+
+#id_turno span {
+    font-size: 1.7em;
+    text-decoration: underline;
+}
+
+#id_tiempo {
+    border: 2px solid red; 
+    padding: 5px; 
 }
 
 @media (min-width: 1000px) {
