--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,9 @@
+html,
+body {
+  height: 100%;
+}
+
+
 /* clases para efecto de carta : tomado de https://www.w3schools.com/howto/howto_css_flip_card.asp */
 
 .flip-card {
@@ -50,7 +56,48 @@
     background-image: url('../images/back-card.png');
 }
 
-/**
+/*********************************************************************************
+* diseño de bootstrap
+*/
+body {
+  background-color: #f5f5f5;
+  font-family: "Comic Sans MS", Impact, Charcoal, sans-serif;
+}
+
+#block-inicio {
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -ms-flex-align: center;
+    -ms-flex-pack: center;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+
+    justify-content: center;
+}
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+
+/*********************************************************************************
  ** Diseño personal
 */
 
