--- a/css/app.css
+++ b/css/app.css
@@ -59,23 +59,6 @@ body {
 /*********************************************************************************
 * diseño de bootstrap
 */
-body {
-  background-color: #f5f5f5;
-  font-family: "Comic Sans MS", Impact, Charcoal, sans-serif;
-}
-
-#block-inicio {
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: flex;
-    -ms-flex-align: center;
-    -ms-flex-pack: center;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-
-    justify-content: center;
-}
 
 .form-signin {
   width: 100%;
@@ -100,6 +83,33 @@ body {
 /*********************************************************************************
  ** Diseño personal
 */
+
+body {
+    background-color: #f5f5f5;
+    font-family: "Comic Sans MS", Impact, Charcoal, sans-serif;
+}
+
+#encabezado {
+    width: 240px; 
+    height: 100px; 
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url('../images/img_encabezado.png');
+}
+
+#block-inicio {
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -ms-flex-align: center;
+    -ms-flex-pack: center;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+
+    justify-content: center;
+}
 
 .bloque-juego {
     width: 100%;
@@ -193,6 +203,8 @@ body {
         width: 100%; 
         height: 400px; 
     }
+
+    
 }
 
 @media  (max-width: 399px) { 
@@ -209,6 +221,10 @@ body {
     #id_turno span {
         font-size: 1.1em;
         text-decoration: underline;
+    }
+
+    .modal {
+        font-size: 0.5em;
     }
 }
 
